--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,14 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --primary-color: #EAFAEA; /* Replace with your desired color */
+  --secondary-color: #6E8E59; /* Replace with your desired color */
+  --tertiary-color: #33372C; 
+  --taskbox :#CAE0BC;/* Replace with your desired color */
+  --font-sans: Arial, Helvetica, sans-serif;
+  --font-lateef: "Lateef", cursive;
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-lateef);
 }
